change-header-to-header-slider

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -641,6 +641,11 @@ body {
   .header .header-content h5 {
     margin-top: 0;
   }
+
+  .header {
+    height: auto !important;
+    padding-bottom: 60px !important;
+  }
 }
 .header-slider .slick-arrow::before {
   font-family: "FontAwesome";
